# vibeSnap

./: .gitignore  README.md  package-lock.json  package.json  start-dev.sh
src/: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/src/: App.css  App.tsx  AutoWatcher.tsx  ConfirmDialog.tsx  FolderSelector.tsx  GitService.ts  GitStatusChecker.tsx  GitStatusExample.ts  MainLayout.tsx  QuickCommitModal.tsx  SnapshotCreator.tsx  SnapshotDetail.tsx  SnapshotTimeline.tsx  index.css
